# nbgrader

./: README.md  dev-requirements.txt  setup.py  tasks.py
.github/workflows/: ci-linux.yml
nbgrader/: api.py
nbgrader/alembic/versions/: e43177bfe90b_added_course_table_and_relationships.py
nbgrader/labextensions/assignment_list/: package.json
nbgrader/labextensions/assignment_list/assignment_list/: __init__.py
nbgrader/labextensions/assignment_list/src/: index.ts
nbgrader/labextensions/cookiecutter_template/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py
nbgrader/labextensions/cookiecutter_template/.github/workflows/: build.yml  check-release.yml
nbgrader/labextensions/cookiecutter_template/src/: index.ts
nbgrader/labextensions/course_list/: package.json  setup.py
nbgrader/labextensions/course_list/course_list/: __init__.py
nbgrader/labextensions/create_assignment/: package.json
nbgrader/labextensions/form_grader/form_grader/: __init__.py
nbgrader/labextensions/form_grader/src/: index.ts
nbgrader/labextensions/validate_assignment/: package.json  setup.py
nbgrader/labextensions/validate_assignment/validate_assignment/: __init__.py
