[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["cookiecutter_template/labextension/static/style.js"]
ensured-targets = ["cookiecutter_template/labextension/static/style.js", "cookiecutter_template/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["cookiecutter_template/labextension/**", "yarn.lock", ".*", "package-lock.json"]
